<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="101dp"
        android:layout_height="127dp"
        android:layout_marginTop="152dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08"
        app:srcCompat="@drawable/ic_icono" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/inicioSecionCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo_electronico"
                android:inputType="textEmailSubject"
                android:textColor="#090909"
                android:textColorHint="@color/black"></EditText>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <EditText

                android:id="@+id/inicioSecionContraseña"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contraseña"
                android:includeFontPadding="false"
                android:textColor="@color/black"
                android:textColorHint="@color/black">

            </EditText>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnInicioRegistrarte"
        android:layout_width="@dimen/btnInicioHorizontal"
        android:layout_height="@dimen/btnInicioVertical"
        android:layout_marginTop="20dp"
        android:text="@string/registrarse"
        android:textColor="@color/white"
        app:backgroundTint="#FFA56551"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarsesion" />

    <Button
        android:id="@+id/btnIniciarsesion"
        android:layout_width="@dimen/btnInicioHorizontal"
        android:layout_height="@dimen/btnInicioVertical"
        android:layout_marginTop="25dp"
        android:text="@string/iniciar_sesion"
        android:textColor="@color/white"
        app:backgroundTint="#A56551"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/textViewO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnInicioRegistrarte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarsesion"
        app:layout_constraintVertical_bias="0.405" />

    <Button
        android:id="@+id/btnIngresacongoogle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableLeft="@drawable/google_ico"
        android:drawablePadding="15dp"
        android:text="@string/inicioConGoogle"

        android:textColor="@color/black"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInicioRegistrarte" />


</androidx.constraintlayout.widget.ConstraintLayout>