<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    tools:context=".AnadirFragment">

    <!-- TODO: Update blank fragment layout -->


    <TextView
        android:id="@+id/aniadirCategoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:fontFamily="casual"
        android:text="@string/aniadirCategoria"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/aniadirIngredientes"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="Añadir Receta"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aniadirIngredientes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:fontFamily="casual"
        android:text="@string/anadirReceta_Ingedientes"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aniadirDescripciontxt" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerIngredientes"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aniadirIngredientes" />

    <TextView
        android:id="@+id/anadirTitulotxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:fontFamily="casual"
        android:text="@string/anadirReceta_Titulo"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/anadirTitulo"
        android:layout_width="259dp"
        android:layout_height="47dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:textColor="@color/fondo"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/anadirTitulotxt"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/aniadirProcedimientotxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:fontFamily="casual"
        android:text="@string/anadirReceta_Procedimineto"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerIngredientes"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/anadirProcedimiento"
        android:layout_width="0dp"
        android:layout_height="72dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:fontFamily="casual"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:maxLines="30"
        android:minLines="2"
        android:scrollbars="vertical"
        android:textColor="@color/fondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aniadirProcedimientotxt"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/aniadirIngredientebtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        app:layout_constraintStart_toEndOf="@+id/aniadirIngredientes"
        app:layout_constraintTop_toBottomOf="@+id/aniadirDescripciontxt"
        app:srcCompat="@drawable/ic_action_add" />

    <Button
        android:id="@+id/btnAniadirReceta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="10dp"
        android:text="@string/aniadirReceta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anadirProcedimiento" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/cancelarReceta"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnAniadirReceta"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/aniadirDescripciontxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="50dp"
        android:fontFamily="casual"
        android:text="@string/aniadirDescripcion"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/anadirTitulotxt" />

    <EditText
        android:id="@+id/aniadirDescripcion"
        android:layout_width="209dp"
        android:layout_height="47dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:ems="10"
        android:fontFamily="casual"
        android:inputType="textPersonName"
        android:textColor="@color/fondo"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/aniadirDescripciontxt"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinnerCatalogo"
        android:layout_width="141dp"
        android:layout_height="53dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aniadirCategoria" />

    <ImageView
        android:id="@+id/aniadirImagen"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCatalogo"
        app:srcCompat="@drawable/ic_aniadirimagen" />

</androidx.constraintlayout.widget.ConstraintLayout>

